--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "supervisor .bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
@@ -11,10 +11,8 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.1.9",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
-  },
-  "scripts": {
-          "start": "supervisor .bin/www"
   }
 }
