--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "supervisor .bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -13,6 +14,9 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.1.9",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
