--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "https": "^1.0.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.7.1",
