--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "https": "^1.0.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.1.9",
+    "mailgun-js": "^0.12.1",
     "mongoose": "^4.7.1",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
